syntax = "proto3";

package server.module.player.grpccontracts.v1;

option csharp_namespace = "Server.Module.Player.GrpcContracts.V1";

import "google/type/money.proto";

service PlayerService {
    rpc Get(string) returns (PlayerDto);
    rpc Subscribe(string) returns (stream PlayerDto);
}

message PlayerDto {
    string playerId = 1;
    string name = 2;
    int32 health = 3;
    int32 hunger = 4;
    int32 mood = 5;
    google.type.Money pocketMoney = 6;
}